--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -356,3 +356,5 @@ computation_core_research_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- $tec_loc_researc
 
 describe_machine_worlds:7 "Machine World:\n$t$- Uninhabitable for most organics\n$t$- Unlimited £district£ §YCoordination§!, §YGenerator§!, and §YMining Districts§!\n$t$- Doubles $tec_loc_housing$ and $tec_loc_jobs$ from £district£ §YIndustrial§!, §YCoordination§!, §YGenerator§!, and §YMining§! Districts\n$t$- $mod_planet_jobs_produces_mult$: §G+10%§!\n$t$- £district£ §YNexus§! Districts get an ['concept_tec_specialist_job_tec_spareparts_drone_icon'] Job and doubled $tec_loc_housing$\n$t$- Housing Usage: §G-10%§!\n$t$- §RRemoves all Agriculture Districts§!"
 describe_hive_worlds:1 "Hive World:\n$t$- Uninhabitable for non-hive minded species\n$t$- Unlimited £district£ §YSynaptic§!, §YFarming§!, §YGenerator§!, and §YMining Districts§!\n$t$- Doubles $tec_loc_housing$ and $tec_loc_jobs$ from £district£§YHive§!, §YIndustrial§!, §YSynaptic§!, §YFarming§!, §YGenerator§!, and §YMining§! Districts\n$t$- $mod_planet_jobs_produces_mult$: §G+10%§!"
+
+TECH_UNLOCK_GENE_EXPRESSIONS_TITLE: "§HUnlocks Trait:§! ['trait:trait_auto_mod_biological'']"
