--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2659,26 +2659,54 @@
 
 # Techs
 	concept_tec_tech_mine_dark_matter: "£physics£ $tech_mine_dark_matter$"
-	concept_tec_tech_mine_dark_matter_effect: "$TECH_UNLOCK_RESOURCE$ $tec_loc_dark_matter$"
+	concept_tec_tech_mine_dark_matter_effect: "- $TECH_UNLOCK_RESOURCE$ $tec_loc_dark_matter$"
 	concept_tec_tech_mine_dark_matter_desc: "$concept_tec_tech_mine_dark_matter_effect$\n\n§L$tech_mine_dark_matter_desc$§!"
 
 	concept_tec_tech_hydroponics: "£society£ $tech_hydroponics$"
-	concept_tec_tech_hydroponics_effect: "$TECH_UNLOCK_BUILDING$: ['building:building_hydroponics_farm']"
+	concept_tec_tech_hydroponics_effect: "- $TECH_UNLOCK_BUILDING$: ['building:building_hydroponics_farm']"
 	concept_tec_tech_hydroponics_desc: "$concept_tec_tech_hydroponics_effect$\n\n§L$tech_hydroponics_desc$§!"
 
 	concept_tec_tech_dark_matter_deflector: "£physics£ $tech_dark_matter_deflector$"
-	concept_tec_tech_dark_matter_deflector_effect: "$TECH_UNLOCK_COMPONENT_LINE$ $DARK_MATTER_DEFLECTOR$"
+	concept_tec_tech_dark_matter_deflector_effect: "- $TECH_UNLOCK_COMPONENT_LINE$ $DARK_MATTER_DEFLECTOR$"
 	concept_tec_tech_dark_matter_deflector_desc: "$concept_tec_tech_dark_matter_deflector_effect$\n\n§L$tech_dark_matter_deflector_desc$§!"
 
 	concept_tec_tech_dark_matter_power_core: "£physics£ $tech_dark_matter_power_core$"
-	concept_tec_tech_dark_matter_power_core_effect: "$TECH_UNLOCK_DARK_MATTER_POWER_TITLE$"
+	concept_tec_tech_dark_matter_power_core_effect: "- $TECH_UNLOCK_DARK_MATTER_POWER_TITLE$"
 	concept_tec_tech_dark_matter_power_core_desc: "$concept_tec_tech_dark_matter_power_core_effect$\n\n§L$tech_dark_matter_power_core_desc$§!"
 
 	concept_tec_tech_dark_matter_propulsion: "£engineering£ $tech_dark_matter_propulsion$"
-	concept_tec_tech_dark_matter_propulsion_effect: "$TECH_UNLOCK_DARK_MATTER_PROPULSION_TITLE$"
+	concept_tec_tech_dark_matter_propulsion_effect: "- $TECH_UNLOCK_DARK_MATTER_PROPULSION_TITLE$"
 	concept_tec_tech_dark_matter_propulsion_desc: "$concept_tec_tech_dark_matter_propulsion_effect$\n\n§L$tech_dark_matter_propulsion_desc$§!"
 
-# Tech Groups
+	concept_tec_tech_robomodding: "£engineering£ $tech_robomodding$"
+	concept_tec_tech_robomodding_effect: "- Allows the modification of £job_roboticist£ $tec_robot_subname$"
+	concept_tec_tech_robomodding_desc: "$concept_tec_tech_robomodding_effect$\n\n§L$tech_robomodding_desc$§!"
+
+	concept_tec_tech_powered_exoskeletons: "£engineering£ $tech_powered_exoskeletons$"
+	concept_tec_tech_powered_exoskeletons_effect: "- $MOD_ARMY_DAMAGE_MULT$: §G+5%§!\n- Worker Pop Resource Output: §G+5%§!"
+	concept_tec_tech_powered_exoskeletons_desc: "$concept_tec_tech_powered_exoskeletons_effect$\n\n§L$tech_powered_exoskeletons_desc$§!"
+
+	concept_tec_tech_robotic_workers: "£engineering£ $tech_robotic_workers$"
+	concept_tec_tech_robotic_workers_effect: "- §HUnlocks Feature:§! $feature_robots$"
+	concept_tec_tech_robotic_workers_desc: "$concept_tec_tech_robotic_workers_effect$\n\n§L$tech_robotic_workers_desc$§!"
+
+	concept_tec_tech_genome_mapping: "£society£$tech_genome_mapping$"
+	concept_tec_tech_genome_mapping_effect: "- $mod_BIOLOGICAL_species_trait_points_add$: §G+1§!"
+	concept_tec_tech_genome_mapping_desc: "$concept_tec_tech_genome_mapping_effect$\n\n§L$tech_genome_mapping_desc$§!"
+
+	concept_tec_tech_gene_tailoring: "£society£ $tech_gene_tailoring$"
+	concept_tec_tech_gene_tailoring_effect: "- §HUnlocks Feature:§! $feature_modify_traits$\n- §HUnlocks Feature:§! $feature_pop_self_modification$\n- $mod_BIOLOGICAL_species_trait_points_add$: §G+2§!"
+	concept_tec_tech_gene_tailoring_desc: "$concept_tec_tech_gene_tailoring_effect$\n\n§L$tech_gene_tailoring_desc$§!"
+
+	concept_tec_tech_tec_bioservant: "£society£ $tech_tec_bioservant$"
+	concept_tec_tech_tec_bioservant_effect: "- $tech_tec_bioservant_TITLE$"
+	concept_tec_tech_tec_bioservant_desc: "$concept_tec_tech_tec_bioservant_effect$\n\n§L$tech_tec_bioservant_desc$§!"
+
+	concept_tec_tech_gene_expressions: "£society£ $tech_gene_expressions$"
+	concept_tec_tech_gene_expressions_effect: "- $TECH_UNLOCK_GENE_EXPRESSIONS_TITLE$"
+	concept_tec_tech_gene_expressions_desc: "$concept_tec_tech_gene_expressions_effect$\n\n§L$tech_gene_expressions_desc$§!"
+
+	# Tech Groups
 	concept_tec_tech_group_dark_matter_techs: "$tec_loc_dark_matter$ Technologies"
 	concept_tec_tech_group_dark_matter_techs_desc: "- ['concept_tec_tech_dark_matter_deflector']\n- ['concept_tec_tech_dark_matter_power_core']\n- ['concept_tec_tech_dark_matter_propulsion']"
 #/
