gene ascension changes

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -766,15 +766,17 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 # ------------------------------------------------- Gene Ascension
  # -------- Building&Job
 	# Jobs working her
-	building_tec_regular_gene_vat:0 "Genetic Archive"
-	building_tec_regular_gene_vat_plural:0 "$building_tec_regular_gene_vat$s"
-	building_tec_regular_gene_vat_desc:0 "TO DO"
-	building_tec_regular_gene_vat_effect:0 "This £building£ "
-	building_tec_regular_gene_vat_effect_situation:0 "This £building£ "
+	building_tec_regular_genetic_archive:0 "Genetic Archive"
+	building_tec_regular_genetic_archive_plural:0 "$building_tec_regular_genetic_archive$s"
+	building_tec_regular_genetic_archive_desc:0 "TO DO"
+	building_tec_regular_genetic_archive_effect:0 "This £building£ "
+	building_tec_regular_genetic_archive_effect_situation:0 "This £building£ "
 
-	building_tec_biohive_gene_vat:0 "Genetic Repository"
-	building_tec_biohive_gene_vat_plural:0 "Genetic Repositories"
-	building_tec_biohive_gene_vat_desc:0 "TO DO"
+	building_tec_biohive_genetic_archive:0 "Genetic Repository"
+	building_tec_biohive_genetic_archive_plural:0 "Genetic Repositories"
+	building_tec_biohive_genetic_archive_desc:0 "TO DO"
+
+	building_tec_genetic_archive_allow_recombination:0 "\n§EFeature:§! §H£tec_genetics_icon£ Local Recombination§!\n- Allows the use of the §Y£stability£ $decision_tec_genetic_recombination$§! on this colony.\n"
 
 	job_tec_gene_recombinator:0 "Geno-Tailor"
 	job_tec_gene_recombinator_plural:0 "Geno-Tailors"
@@ -784,8 +786,8 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	mod_job_tec_gene_recombinator_per_pop:0 "§G+1§! $job_tec_gene_recombinator$ Job per $VALUE$ Pops"
 	mod_job_tec_gene_recombinator_per_pop_short:0 "\n§G+1§! £mod_job_tec_gene_recombinator_add£ per $VALUE$ £pop£"
 
-	job_tec_gene_recombinator_drone:0 "Geno-Tailor"
-	job_tec_gene_recombinator_drone_plural:0 "Geno-Tailors"
+	job_tec_gene_recombinator_drone:0 "Geno-Weaver"
+	job_tec_gene_recombinator_drone_plural:0 "Geno-Weavers"
 	job_tec_gene_recombinator_drone_desc:0 "TODO ASCENSION"
 	job_tec_gene_recombinator_drone_effect_desc:0 "TODO ASCENSION"
 	mod_job_tec_gene_recombinator_drone_add:0 "$job_tec_gene_recombinator_drone$ Jobs"
@@ -801,11 +803,23 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	mod_job_tec_genetic_repository_per_pop_short:0 "\n§G+1§! £mod_job_tec_genetic_repository_add£ per $VALUE$ £pop£"
  # /
  # Agenda
-	council_agenda_agenda_tec_gene_recombination_name:0 "Genetic Recombination"
-	council_agenda_agenda_tec_gene_recombination_desc:0 "TODO ASCENSION"
-	council_agenda_agenda_tec_gene_recombination_effects:0 "TODO ASCENSION"
-	modifier_tec_agenda_tec_gene_recombination_finish:0 "Genetic Recombination"
-	modifier_tec_agenda_tec_gene_recombination_finish_desc:0 "$council_agenda_agenda_tec_gene_recombination_desc$"
+	council_agenda_agenda_tec_genetic_recombination_name:0 "Recombination Overdrive"
+	council_agenda_agenda_tec_genetic_recombination_desc:0 "By increasing our efforts towards recombination of positive trait and genetic conditions, we can greatly improve our overall efficiency and provide better results."
+	council_agenda_agenda_tec_genetic_recombination_regular_tooltip:0 "£tec_genetics_icon£ $job_tec_gene_recombinator_plural$ contribution towards £stability£ $situation_tec_ascension_genetic_recombination$ situation: §Y+50%§!"
+	council_agenda_agenda_tec_genetic_recombination_gestalt_tooltip:0 "£tec_genetics_icon£ $job_tec_gene_recombinator_drone_plural$ contribution towards £stability£ $situation_tec_ascension_genetic_recombination$ situation: §Y+50%§!"
+	modifier_tec_agenda_tec_genetic_recombination_finish:0 "$council_agenda_agenda_tec_genetic_recombination_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_genetic_recombination_finish_desc:0 "$council_agenda_agenda_tec_genetic_recombination_desc$"
+
+	tec_agenda_require_no_active_recombination_or_cd:0 "TODO ASCENSION"
+
+
+	decision_tec_genetic_recombination:0 "Start Recombination"
+	decision_tec_genetic_recombination_desc:0 "Local genetic facilities are prepared to start the reanalysis of potential genetic traits, allowing the enhancement of our species as a whole."
+	decision_tec_genetic_recombination_ongoing:0 "$TRIGGER_FAIL$An ongoing §Y£stability£ $situation_tec_ascension_genetic_recombination$§! is taking place."
+	decision_tec_genetic_recombination_require_genetic_archives:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_regular_genetic_archive$§!."
+	decision_tec_genetic_recombination_require_genetic_repositories:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_biohive_genetic_archive$§!."
+	decision_tec_genetic_recombination_tooltip:0 "Starts the §Y£stability£ $situation_tec_ascension_genetic_recombination$§!, allowing the upgrade of genetic perfected traits."
+
  # /
 # /
 
