--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -339,6 +339,9 @@ todo_ascension:0 ""
 	situation_tec_ascension_genetic_recombination_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_genetic_recombination_approach_fast_string:0 "$situation_tec_ascension_genetic_recombination_approach_fast$"
 
+	situation_tec_ascension_genetic_recombination_job_contribution:0 "From $job_tec_gene_recombinator$ jobs"
+	situation_tec_ascension_genetic_recombination_job_contribution_gestalt:0 "From $job_tec_gene_recombinator_drone$ jobs"
+
 	tec_gene_recombination_upgrade:0 "\n\n$trigger_tec_warning$ We have decided to focus on §YUpgrading§! one of our traits."
 	tec_gene_recombination_upgrade_main:0 "\n\n$trigger_tec_warning$ We have decided to focus on §YUpgrading§! one of our §YMain§! traits."
 	tec_gene_recombination_upgrade_advanced:0 "\n\n$trigger_tec_warning$ We have decided to focus on §YUpgrading§! one of our §YAdvanced§! traits."
@@ -1903,28 +1906,28 @@ todo_ascension:0 ""
 	tec_gene_path.20010.continue.hive.tooltip:0 "TODO ASCENSION"
 
 	tec_gene_path.20020.name:0 "Our Genome, Deciphered"
-	tec_gene_path.20020.desc.regular:0 "TODO ASCENSION"
-	tec_gene_path.20020.desc.hive:0 "TODO ASCENSION"
-	tec_gene_path.20020.continue.regular:0 "TODO ASCENSION"
+	tec_gene_path.20020.desc.regular:0 "TODO ASCENSION - We have fully decoded our genetics thanks to the strains and variants applied."
+	tec_gene_path.20020.desc.hive:0 "TODO ASCENSION - We have fully decoded our genetics thanks to the strains and variants applied."
+	tec_gene_path.20020.continue.regular:0 "So close to unlock our potential..."
 	tec_gene_path.20020.continue.regular.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.20020.continue.hive:0 "TODO ASCENSION"
+	tec_gene_path.20020.continue.hive:0 "Our collective will evolve faster..."
 	tec_gene_path.20020.continue.hive.tooltip:0 "TODO ASCENSION"
 
 	tec_gene_path.20030.name:0 "The Seed Of Perfection"
-	tec_gene_path.20030.desc.regular:0 "TODO ASCENSION"
-	tec_gene_path.20030.desc.hive:0 "TODO ASCENSION"
-	tec_gene_path.20030.continue.regular:0 "TODO ASCENSION"
+	tec_gene_path.20030.desc.regular:0 "TODO ASCENSION - A new way to create perfected pairs and strains is discovered"
+	tec_gene_path.20030.desc.hive:0 "TODO ASCENSION - A new way to create perfected pairs and strains is discovered"
+	tec_gene_path.20030.continue.regular:0 "Future is at our grasp"
 	tec_gene_path.20030.continue.regular.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.20030.continue.hive:0 "TODO ASCENSION"
+	tec_gene_path.20030.continue.hive:0 "A bright future for our collective"
 	tec_gene_path.20030.continue.hive.tooltip:0 "TODO ASCENSION"
 
 	# Subpaths
 	tec_gene_path.20050.name:0 "Divided Inheritance"
-	tec_gene_path.20050.desc.regular:0 "TODO ASCENSION"
+	tec_gene_path.20050.desc.regular:0 "TODO ASCENSION - The scale of the genetic improvements require deciding, genetic therapies for a single species or for multiple species"
 	tec_gene_path.20050.desc.hive:0 "UNUSED - SHOULD NOT APPEAR"
-	tec_gene_path.20050.focusgenetics.regular:0 "We must focus on self genetic improvement."
+	tec_gene_path.20050.focusgenetics.regular:0 "Focus on gene-improvements for our species."
 	tec_gene_path.20050.focusgenetics.regular.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.20050.demogenetics.regular:0 "We must provide genetic improvements for everyone."
+	tec_gene_path.20050.demogenetics.regular:0 "Provide gene-improvements for everyone."
 	tec_gene_path.20050.demogenetics.regular.tooltip:0 "TODO ASCENSION"
 
 	tec_gene_path.20051.name:0 "Divided Inheritance"
@@ -1936,8 +1939,8 @@ todo_ascension:0 ""
 	tec_gene_path.20051.reselect.regular.tooltip:0 "TODO ASCENSION"
 
 	tec_gene_path.20150.name:0 "Collective Legacy"
-	tec_gene_path.20150.desc.hive:0 "TODO ASCENSION"
-	tec_gene_path.20150.focusgenetics.hive:0 "We must ensure we all are the same body, the same mind, the same species."
+	tec_gene_path.20150.desc.hive:0 "TODO ASCENSION - The scale of the genetic improvements require deciding, genetic therapies for a single species or for multiple species"
+	tec_gene_path.20150.focusgenetics.hive:0 "All as the same body, the same mind, the same species."
 	tec_gene_path.20150.focusgenetics.hive.tooltip:0 "TODO ASCENSION"
 	tec_gene_path.20150.hivegenetics.hive:0 "We must focus on manifesting our will through genetics, for everyone."
 	tec_gene_path.20150.hivegenetics.hive.tooltip:0 "TODO ASCENSION"
@@ -1969,8 +1972,8 @@ todo_ascension:0 ""
 	tec_gene_path.20090.growth.hive:0 "Engineer §YReproductive Boosters§!"
 	tec_gene_path.20090.growth.hive.tooltip:0 "Our £tec_genetics_icon£ $job_tec_gene_recombinator_drone_plural$ will §GIncrease§! the $tec_loc_organic_assembly$ locally on each §Y$tec_loc_planet$§!.\n\n$tec_unlock_agenda_tec_genetic_recombination$"
 
-	tec_unlock_building_genetic_vats:0 "TODO ASCENSION - The §Y$tec_loc_building_icon$ $building_tec_regular_gene_vat_plural$§! are available. Each built $building_tec_regular_gene_vat$ will increase the §YSituation progress§!."
-	tec_unlock_building_genetic_vats_biohive:0 "TODO ASCENSION - The §Y$tec_loc_building_icon$ $building_tec_biohive_gene_vat_plural$§! are available. Each built $building_tec_biohive_gene_vat$ will increase the §YSituation progress§!."
+	tec_unlock_building_genetic_vats:0 "TODO ASCENSION - The §Y$tec_loc_building_icon$ $building_tec_regular_genetic_archive_plural$§! are available. Each built $building_tec_regular_genetic_archive$ will increase the §YSituation progress§!."
+	tec_unlock_building_genetic_vats_biohive:0 "TODO ASCENSION - The §Y$tec_loc_building_icon$ $building_tec_biohive_genetic_archive_plural$§! are available. Each built $building_tec_biohive_genetic_archive$ will increase the §YSituation progress§!."
 	tec_unlock_agenda_tec_genetic_recombination:0 "TODO ASCENSION - The agenda $council_agenda_agenda_tec_gene_recombination_name$ will be available after the situation end"
 
 	# Special Empire Interactions
@@ -2012,17 +2015,25 @@ todo_ascension:0 ""
  # --------------- GENE T2 FINISH
 	# GENE T2 Situation Completed
 	tec_gene_path.205.name:0 "Genetic Perfection"
-	tec_gene_path.205.desc:0 "We have reached the maximum potential of biological and genetic evolution, as we have discovered the key to read and unlock the true potential of any organic genetic code in our galaxy, and probably far beyond. Any organic being inside [Root.GetName] is able to enjoy the best, unique and customized genetic changes.\n\nWe have forged our path to the future, cell to cell, dna strand to dna strand, and as a perfect species we will now thrive where no one did before."
-	tec_gene_path.205.a:0 "We are perfect."
-	tec_gene_path.205.a.tooltip:0 "Unlocks §YBiological Assimilation§!. Any organic species can be assimilated into new §Y[Root.Owner.Species.GetNamePlural]§!."
+	tec_gene_path.205.desc.regular:0 "We have reached the maximum potential of biological and genetic evolution, as we have discovered the key to read and unlock the true potential of any organic genetic code in our galaxy, and probably far beyond. Any organic being inside [Root.GetName] is able to enjoy the best, unique and customized genetic changes.\n\nWe have forged our path to the future, cell to cell, dna strand to dna strand, and as a perfect species we will now thrive where no one did before."
+	tec_gene_path.205.desc.hive:0 "$tec_gene_path.205.desc.regular$"
+	tec_gene_path.205.ok.regular:0 "We are perfect."
+	tec_gene_path.205.ok.regular.tooltip:0 "Unlocks §YBiological Assimilation§!. Any organic species can be assimilated into new §Y[Root.Owner.Species.GetNamePlural]§!."
 
 	# GENE T2 Notification to other empires
 	tec_gene_path.20501.name:0 "[From.Capital.GetName] announces their ''Genetic Perfection''"
 	tec_gene_path.20501.desc:0 "Everyone on the galaxy has received a broadcast announcing the extreme changes taking places inside [From.GetName] colonies, as they declare a ''fully perfected body'' has been reached, and their genetic achievements are superior to anything already discovered.\n\nMany are curious and trying to watch themselves the new things they achieved, but rumors say they never return or, at least, not like they were before, and any claim is radically denied."
-	tec_gene_path.20501.a:0 "Perfection, what a concept."
-	tec_gene_path.20501.b:0 "Strange, and suspicious."
-	tec_gene_path.20501.c:0 "They will never outgrow our versatility."
-	tec_gene_path.20501.d:0 "We will incorporate their genetic material soon."
+	tec_gene_path.20501.interest:0 "Perfection, what a concept"
+	tec_gene_path.20501.disdain:0 "Meh, probably just mere pompousness"
+	tec_gene_path.20501.hate:0 "Futile changes for futile beings."
+	tec_gene_path.20501.same_path:0 "A shared interest in perfection, intriguing..."
+	tec_gene_path.20501.concern:0 "They are playing with things they don't understand"
+	tec_gene_path.20501.machine:0 "Organic matter will never mirror the perfection of circuitry"
+	tec_gene_path.20501.assimilator:0 "Perfect candidates for indexation"
+	tec_gene_path.20501.homicidal.regular:0 "What a joke, perfect targets to purge"
+	tec_gene_path.20501.homicidal.hive:0 "Tastier food..."
+	tec_gene_path.20501.homicidal.machine:0 "Vain attempts. Neutralization imminent"
+
  # /
  # --------------- GENE T2 POST ASCENSION
 	tec_gene_path.300.name:0 "Genetic Motif"
