--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -62,7 +62,9 @@ l_english:
  # /
 
  # Utilities
-	tec_building_ascension_scaling:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency§!\n- The number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n\n"
+	tec_building_capital_scaling:0 "\n§EFeature:§! §H£planet£ Capital Efficiency§!\n- The §Y$tec_loc_capital_tier$§! of this colony increase some of the effects of this building.\n"
+	tec_building_ascension_scaling:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency§!\n- The number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n"
+	tec_building_capital_and_ascension_scaling:0 "\n§EFeature:§! §H£planet£ Development Efficiency§!\n- The §Y$tec_loc_capital_tier$§! and number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n"
 
 	tec_building_ascension_scaling_leader_official:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_official$§!.\n\n"
 	tec_building_ascension_scaling_leader_commander:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_commander$§!.\n\n"
