--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -12,39 +12,39 @@
 	modifier_tec_agenda_tec_assembly_cloning_finish:0 "$council_agenda_agenda_tec_assembly_cloning_name$ $agenda_ref$"
 	modifier_tec_agenda_tec_assembly_cloning_finish_desc:0 "$council_agenda_agenda_tec_assembly_cloning_desc$"
 
-		council_agenda_agenda_tec_aiauth_purge_traits_name: "AI Node Negative Behaviour Inhibition"
-		council_agenda_agenda_tec_aiauth_purge_traits_desc: "Through identifying negative behaviour in our AI Nodes, our empire can install limits in suppressing said behaviour, in exchange for more processing capacity being needed."
-		council_agenda_agenda_tec_aiauth_purge_traits_effect_desc: "Removes §HNegative Traits§! from £tec_ai_node£ AI Nodes.\nFor each Trait removed, lose §R$@agenda_gestalt_purge_traits_exp_change|0$§! experience.\n£tec_ai_node£ AI Nodes that had traits removed, get the §Y$leader_trait_tec_aiauth_negative_behaviour_inhibitor$§! trait which increases the upkeep of the AI Node."
-		modifier_agenda_tec_aiauth_purge_traits_finish: "$council_agenda_agenda_tec_aiauth_purge_traits_name$ $agenda_ref$"
-		modifier_agenda_tec_aiauth_purge_traits_finish_desc: "$council_agenda_agenda_tec_aiauth_purge_traits_desc$"
+		council_agenda_agenda_tec_aiauth_purge_traits_name:0 "AI Node Negative Behaviour Inhibition"
+		council_agenda_agenda_tec_aiauth_purge_traits_desc:0 "Through identifying negative behaviour in our AI Nodes, our empire can install limits in suppressing said behaviour, in exchange for more processing capacity being needed."
+		council_agenda_agenda_tec_aiauth_purge_traits_effect_desc:0 "Removes §HNegative Traits§! from £tec_ai_node£ AI Nodes.\nFor each Trait removed, lose §R$@agenda_gestalt_purge_traits_exp_change|0$§! experience.\n£tec_ai_node£ AI Nodes that had traits removed, get the §Y$leader_trait_tec_aiauth_negative_behaviour_inhibitor$§! trait which increases the upkeep of the AI Node."
+		modifier_agenda_tec_aiauth_purge_traits_finish:0 "$council_agenda_agenda_tec_aiauth_purge_traits_name$ $agenda_ref$"
+		modifier_agenda_tec_aiauth_purge_traits_finish_desc:0 "$council_agenda_agenda_tec_aiauth_purge_traits_desc$"
 
-		council_agenda_agenda_tec_aiauth_restructuring_name: "$tec_aiauth_ruler$ Restructuring"
-		council_agenda_agenda_tec_aiauth_restructuring_desc: "The empire seeks to re-specialize the $tec_aiauth_ruler$, prioritizing new tasks and ethical alignment over accumulated experience."
-		council_agenda_agenda_tec_aiauth_restructuring_effect_desc: "The $tec_aiauth_ruler$ will lose §Rhalf§! of its levels, allowing to re-fragment it, to change its §YEthic§! and §YLeader Class§! and re-roll §YTraits§!."
+		council_agenda_agenda_tec_aiauth_restructuring_name:0 "$tec_aiauth_ruler$ Restructuring"
+		council_agenda_agenda_tec_aiauth_restructuring_desc:0 "The empire seeks to re-specialize the $tec_aiauth_ruler$, prioritizing new tasks and ethical alignment over accumulated experience."
+		council_agenda_agenda_tec_aiauth_restructuring_effect_desc:0 "The $tec_aiauth_ruler$ will lose §Rhalf§! of its levels, allowing to re-fragment it, to change its §YEthic§! and §YLeader Class§! and re-roll §YTraits§!."
 
 		council_agenda_agenda_tec_assembly_robots_provide_robot_techs:0 "Provide the next £engineering£ §YRobotic§! Technology"
-	council_agenda_agenda_tec_assembly_robots_provide_powered_tech:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_powered_tech_machine:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons_machine_intelligence$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_workers_tech:0 "Progress towards £engineering£§Y$tech_robotic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_droids_tech:0 "Progress towards £engineering£§Y$tech_droid_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_synth_tech:0 "Progress towards £engineering£§Y$tech_synthetic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_synth_leaders_tech:0 "Progress towards £engineering£§Y$tech_synthetic_leaders$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_synth_hive_tech:0 "Progress towards £engineering£§Y$tech_synthetic_workers_hive$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_powered_tech:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_powered_tech_machine:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons_machine_intelligence$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_workers_tech:0 "Progress towards £engineering£§Y$tech_robotic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_droids_tech:0 "Progress towards £engineering£§Y$tech_droid_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_synth_tech:0 "Progress towards £engineering£§Y$tech_synthetic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_synth_leaders_tech:0 "Progress towards £engineering£§Y$tech_synthetic_leaders$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_synth_hive_tech:0 "Progress towards £engineering£§Y$tech_synthetic_workers_hive$§!: §G+$@agenda_award_tech_progress|0%$§!"
 
-	council_agenda_agenda_tec_assembly_robots_provide_machine_techs:0 "Provide the next £engineering£ Machine §YAssembly§! or §YModification§! Technology"
-	council_agenda_agenda_tec_assembly_robots_provide_machine_powered_tech:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_machine_robomodding_tech:0 "Progress towards £engineering£§Y$tech_robomodding_m$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_machine_binary_tech:0 "Progress towards £engineering£§Y$tech_binary_motivators$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_machine_mega_assembly_tech:0 "Progress towards £engineering£§Y$tech_mega_assembly$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_robots_provide_machine_giga_assembly_tech:0 "Progress towards £engineering£§Y$tech_giga_assembly$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_machine_techs:0 "Provide the next £engineering£ Machine §YAssembly§! or §YModification§! Technology"
+		council_agenda_agenda_tec_assembly_robots_provide_machine_powered_tech:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_machine_robomodding_tech:0 "Progress towards £engineering£§Y$tech_robomodding_m$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_machine_binary_tech:0 "Progress towards £engineering£§Y$tech_binary_motivators$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_machine_mega_assembly_tech:0 "Progress towards £engineering£§Y$tech_mega_assembly$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_robots_provide_machine_giga_assembly_tech:0 "Progress towards £engineering£§Y$tech_giga_assembly$§!: §G+$@agenda_award_tech_progress|0%$§!"
 
-	council_agenda_agenda_tec_assembly_cloning_provide_techs:0 "Provide the next £tec_genetics_icon£ §YCloning§! or §YGene-Modification§! Technology"
-	council_agenda_agenda_tec_assembly_cloning_provide_cloning_tech:0 "Progress towards £society£§Y$tech_cloning$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_cloning_provide_genome_mapping_tech:0 "Progress towards £society£§Y$tech_genome_mapping$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_cloning_provide_cloning_2_tech:0 "Progress towards £society£§Y$tech_tec_cloning_2$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_cloning_provide_gene_tailoring_tech:0 "Progress towards £society£§Y$tech_gene_tailoring$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_cloning_provide_glandular_acclimation_tech:0 "Progress towards £society£§Y$tech_glandular_acclimation$§!: §G+$@agenda_award_tech_progress|0%$§!"
-	council_agenda_agenda_tec_assembly_cloning_provide_cloning_3_tech:0 "Progress towards £society£§Y$tech_tec_cloning_3$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_cloning_provide_techs:0 "Provide the next £tec_genetics_icon£ §YCloning§! or §YGene-Modification§! Technology"
+		council_agenda_agenda_tec_assembly_cloning_provide_cloning_tech:0 "Progress towards £society£§Y$tech_cloning$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_cloning_provide_genome_mapping_tech:0 "Progress towards £society£§Y$tech_genome_mapping$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_cloning_provide_cloning_2_tech:0 "Progress towards £society£§Y$tech_tec_cloning_2$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_cloning_provide_gene_tailoring_tech:0 "Progress towards £society£§Y$tech_gene_tailoring$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_cloning_provide_glandular_acclimation_tech:0 "Progress towards £society£§Y$tech_glandular_acclimation$§!: §G+$@agenda_award_tech_progress|0%$§!"
+		council_agenda_agenda_tec_assembly_cloning_provide_cloning_3_tech:0 "Progress towards £society£§Y$tech_tec_cloning_3$§!: §G+$@agenda_award_tech_progress|0%$§!"
  # /
  # Ethic
 	modifier_tec_agenda_display_of_power_finish:0 "$agenda_display_of_power_finish$"
@@ -111,9 +111,9 @@
 
 		mod_tec_epigenetic_restoration_mult:0 "Epigenetic Restoration Effectivity"
 
-				council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_name: "Consolidated Infrastructure"
-				council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_desc: "Streamlining the vital areas of our empire with advanced systems and infrastructure, ensuring peak performance and efficiency where it matters most."
-				modifier_agenda_tr_tec_centrality_consolidated_infrastructure_finish: "$council_agenda_tr_tec_centrality_consolidated_infrastructure_name$ $agenda_ref$"
+		council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_name:0 "Consolidated Infrastructure"
+		council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_desc:0 "Streamlining the vital areas of our empire with advanced systems and infrastructure, ensuring peak performance and efficiency where it matters most."
+		modifier_agenda_tr_tec_centrality_consolidated_infrastructure_finish:0 "$council_agenda_agenda_tr_tec_centrality_consolidated_infrastructure_name$ $agenda_ref$"
 	# /
  # /
  # Other
